--- a/src/components/BackButton/BackButton.scss
+++ b/src/components/BackButton/BackButton.scss
@@ -2,18 +2,13 @@
 
 .back-button {
   display: flex;
-  flex-direction: row;
-  margin-top: 40px;
-  font-weight: normal;
+  align-items: center;
+  width: fit-content;
   font-size: 12px;
   color: $colorSecondary;
 
   &__image {
     display: block;
     margin-right: 5px;
-  }
-
-  &__text {
-    margin-top: 1px;
   }
 }
