--- a/src/components/CategoryLink/CategoryLink.scss
+++ b/src/components/CategoryLink/CategoryLink.scss
@@ -22,7 +22,7 @@
 
     &--phones {
       background-color: #6D6474;
-      background-image: url('../../../public/img/shop-by-category/phones.png');
+      background-image: url('https://product-catalog-api-0h4z.onrender.com/img/shop-by-category/phones.png');
       background-position: top 30px left 110px;
       background-size: 90%;
       background-repeat: no-repeat;
@@ -40,7 +40,7 @@
 
     &--tablets {
       background-color: #8D8D92;
-      background-image: url('../../../public/img/shop-by-category/tablets.png');
+      background-image: url('https://product-catalog-api-0h4z.onrender.com/img/shop-by-category/tablets.png');
       background-position: top 20px left 30px;
       background-repeat: no-repeat;
 
@@ -51,7 +51,7 @@
 
     &--accessories {
       background-color: #D53C51;
-      background-image: url('../../../public/img/shop-by-category/accessories.png');
+      background-image: url('https://product-catalog-api-0h4z.onrender.com/img/shop-by-category/accessories.png');
       background-position: top 80px left 90px;
       background-size: 150%;
       background-repeat: no-repeat;
