--- a/src/pages/CartPage/CartPage.scss
+++ b/src/pages/CartPage/CartPage.scss
@@ -1,10 +1,15 @@
 @import './../../styles/utils/vars';
 @import './../../styles/utils/mixins';
-@import './../../styles/utils/extends';
 
-.cartPage {
-  @extend %flexColumnCenter;
-  justify-content: center;
+.cart-page {
+
+  &__back-button {
+    margin-bottom: $marginBottomSmall;
+
+    @include onTabletAndDesktop {
+      margin-bottom: $marginBottomTheSmallest;
+    }
+  }
 
   @include onDesktop {
     width: 1136px;
