--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -3,7 +3,7 @@
 
 .home-page {
   &__title {
-    margin-bottom: 56px;
+    margin: 24px 0;
 
     font-weight: $fontWeightBlack;
     font-size: 32px;
@@ -13,6 +13,14 @@
     @include onTabletAndDesktop {
       font-size: 48px;
       line-height: 56px;
+    }
+
+    @include onTablet {
+      margin: 8px 0 32px;
+    }
+
+    @include onDesktop {
+      margin: 32px 0 56px;
     }
 
     color: $colorPrimary;
