--- a/src/components/CartCheckoutButton/CartCheckoutButton.scss
+++ b/src/components/CartCheckoutButton/CartCheckoutButton.scss
@@ -14,9 +14,9 @@
   }
 
   border: 1px solid transparent;
-  background: var(--primaryColor);
+  background: var(--accentColor);
 
   &:hover {
-    box-shadow: 0px 3px 13px rgba(23, 32, 49, 0.4);
+    box-shadow: 0px 3px 13px var(--boxShadowRGBA);
   }
 }
