--- a/src/components/CartUserMessage/CartUserMessage.scss
+++ b/src/components/CartUserMessage/CartUserMessage.scss
@@ -14,10 +14,10 @@
     width: 50%;
     height: auto;
 
-    background: $colorBorder;
+    background: var(--bgOppositeColor);
     font-size: 16px;
     line-height: 40px;
-    color: $colorBlack;
+    color: var(--backgroundColor);
     text-align: center;
     letter-spacing: 4px;
   }
