--- a/src/components/CategoryLink/CategoryLink.scss
+++ b/src/components/CategoryLink/CategoryLink.scss
@@ -1,4 +1,5 @@
 @import '../../styles/utils';
+@import '../../styles/utils/mixins';
 
 .category {
   &__image {
@@ -60,7 +61,7 @@
         background-size: 160%;
         background-position: top 30px left 45px;
       }
-      
+
       @include onDesktop {
         background-size: 150%;
         background-position: bottom 0 left 90px;
