--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   align-items: flex-start;
   height: 257px;
-  box-shadow: 0px -1px 0px $colorElements;
+  box-shadow: 0px -1px 0px var(--elementsColor);
   padding: 32px 16px;
 
   &>:last-child {
@@ -84,7 +84,7 @@
       @extend %flexCenter;
       height: 32px;
       width: 32px;
-      border: 1px solid $colorIcons;
+      border: 1px solid var(--iconsColor);
     }
 
     &__image {
