--- a/src/components/PageNavIcons/PageNavIcons.scss
+++ b/src/components/PageNavIcons/PageNavIcons.scss
@@ -11,7 +11,7 @@
     justify-content: center;
     width: 48px;
     height: 48px;
-    box-shadow: -1px 0 0 $colorElements;
+    box-shadow: -1px 0 0 var(--elementsColor);
 
     &::after {
       position: absolute;
@@ -50,6 +50,6 @@
   &--is-half &__icons {
     width: 50%;
     height: auto;
-    border-top: 1px solid $colorElements;
+    border-top: 1px solid var(--elementsColor);
   }
 }
