--- a/src/styles/utils/_typography.scss
+++ b/src/styles/utils/_typography.scss
@@ -41,6 +41,8 @@ h2 {
   font-size: 22px;
   line-height: 140%;
 
+  color: var(--primaryColor);
+
   @include onTabletAndDesktop {
     font-weight: 800;
     font-size: 32px;
@@ -54,6 +56,8 @@ h3 {
   font-size: 20px;
   line-height: 26px;
 
+  color: var(--primaryColor);
+
   @include onTabletAndDesktop {
     font-weight: 800;
     font-size: 22px;
@@ -65,6 +69,8 @@ h4 {
   font-weight: 700;
   font-size: 16px;
   line-height: 20px;
+
+  color: var(--primaryColor);
 
   @include onTabletAndDesktop {
     font-weight: 700;
